--- a/apps/personal_page/templates/personal_page/index.html
+++ b/apps/personal_page/templates/personal_page/index.html
@@ -2,13 +2,46 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Personal Page</title>
   {% load static %}
-  <link rel="stylesheet" href="{% static 'personal_page/css/main.css'%}">
+  <!-- <link rel="stylesheet" href="{% static 'personal_page/css/main.css'%}"> -->
+  <link rel="stylesheet" href="{% static 'personal/css/main.css'%}">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <h1>Hello</h1>
-  {% load static %}
-  <!-- <img src='{% static "meaning_shop/images/new_york.jpg"%}' alt="New York"> -->
+  <div id="boss" class="container-fluid bg-1 text-center">
+    <h3>Who Am I?</h3>
+    {% load static %}
+    <img src='{% static "personal/images/bird.jpg"%}' class="img-responsive img-circle" style="display:inline" alt="bird">
+    <h3>I'm an adventurer</h3>
+  </div>
+
+  <div class="container-fluid bg-2 text-center">
+    <h3>What Am I?</h3>
+    <p>Lorem ipsum..</p>
+    <a href="#" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-search"></span> Search</a>
+  </div>
+
+  <div class="container-fluid bg-3 text-center">
+    <h3>Where To Find Me?</h3>
+    <div class="row">
+      <div class="col-sm-4">
+        <p>Lorem ipsum..</p>
+        <img src='{% static "personal/images/bird2.jpg"%}'  class="img-responsive" style="width:100%" alt="bird">
+      </div>
+      <div class="col-sm-4">
+        <p>Lorem ipsum..</p>
+        <img src='{% static "personal/images/bird4.jpg"%}'  class="img-responsive" style="width:100%" alt="bird">
+      </div>
+      <div class="col-sm-4">
+        <p>Lorem ipsum..</p>
+        <img src='{% static "personal/images/bird3.jpg"%}'  class="img-responsive" style="width:100%" alt="bird">
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
