--- a/apps/personal_page/static/personal/css/main.css
+++ b/apps/personal_page/static/personal/css/main.css
@@ -1,3 +1,28 @@
+body {
+    font: 20px "Montserrat", sans-serif !important;
+    line-height: 1.8;
+}
+
+p {
+  font-size: 16px;
+}
+
+.margin {margin-bottom: 45px;}
+
+.navbar {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border: 0 !important;
+    border-radius: 0 !important;
+    margin-bottom: 0 !important;
+    font-size: 12px;
+    letter-spacing: 5px;
+}
+
+.navbar-nav li a:hover {
+    color: #1abc9c !important;
+}
+
 .container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
@@ -16,4 +41,9 @@
 .bg-3 {
     background-color: #ffffff; /* White */
     color: #555555;
+}
+
+.bg-4 {
+    background-color: #2f2f2f;
+    color: #ffffff;
 }
