--- a/apps/personal_page/templates/personal_page/index.html
+++ b/apps/personal_page/templates/personal_page/index.html
@@ -5,28 +5,52 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Personal Page</title>
   {% load static %}
-  <!-- <link rel="stylesheet" href="{% static 'personal_page/css/main.css'%}"> -->
   <link rel="stylesheet" href="{% static 'personal/css/main.css'%}">
+
+  <link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
+
 <body>
-  <div id="boss" class="container-fluid bg-1 text-center">
-    <h3>Who Am I?</h3>
+  <nav class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Me</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">WHO</a></li>
+          <li><a href="#">WHAT</a></li>
+          <li><a href="#">WHERE</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container-fluid bg-1 text-center">
+    <h3 class="margin">Who Am I?</h3>
     {% load static %}
-    <img src='{% static "personal/images/bird.jpg"%}' class="img-responsive img-circle" style="display:inline" alt="bird">
+    <img src='{% static "personal/images/bird.jpg"%}' class="margin img-responsive img-circle" style="display:inline" alt="bird">
     <h3>I'm an adventurer</h3>
   </div>
 
   <div class="container-fluid bg-2 text-center">
-    <h3>What Am I?</h3>
+    <h3 class="margin">What Am I?</h3>
     <p>Lorem ipsum..</p>
     <a href="#" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-search"></span> Search</a>
   </div>
 
   <div class="container-fluid bg-3 text-center">
-    <h3>Where To Find Me?</h3>
+    <h3 class="margin">Where To Find Me?</h3>
     <div class="row">
       <div class="col-sm-4">
         <p>Lorem ipsum..</p>
@@ -43,5 +67,8 @@
     </div>
   </div>
 
+  <footer class="container-fluid bg-4 text-center">
+    <p>Site by <a href="#">Tetiana Nesterchuk</a></p>
+  </footer>
 </body>
 </html>
